--- a/src/slack-notifications/slack-notifications-user-configuration.conf.template
+++ b/src/slack-notifications/slack-notifications-user-configuration.conf.template
@@ -1,14 +1,14 @@
-template Notification "slack-notifications-user-configuration" {
-    import "slack-notifications-default-configuration"
+template Notification "teams-notifications-user-configuration" {
+    import "teams-notifications-default-configuration"
 
-    vars.slack_notifications_webhook_url = "<YOUR SLACK WEBHOOK URL>, e.g. https://hooks.slack.com/services/TOKEN1/TOKEN2"
-    vars.slack_notifications_icinga2_base_url = "<YOUR ICINGA2 BASE URL>, e.g. http://icinga-web.yourcompany.com/icingaweb2"
+    vars.teams_notifications_icinga2_base_url =  "<YOUR ICINGA URL>, e.g. https://monitoring.domain.com/icingaweb2"
+    vars.teams_notifications_proxy = "<YOUR PROXY URL>, e.g. http://user:password@proxy.domain.com:port"
 }
 
-template Notification "slack-notifications-user-configuration-hosts" {
-    import "slack-notifications-default-configuration-hosts"
+template Notification "teams-notifications-user-configuration-hosts" {
+    import "teams-notifications-default-configuration-hosts"
 }
 
-template Notification "slack-notifications-user-configuration-services" {
-    import "slack-notifications-default-configuration-services"
+template Notification "teams-notifications-user-configuration-services" {
+    import "teams-notifications-default-configuration-services"
 }
