--- a/src/slack-notifications/slack-notifications-configuration.conf
+++ b/src/slack-notifications/slack-notifications-configuration.conf
@@ -1,83 +1,69 @@
-template Notification "slack-notifications-default-configuration" {
-    types = [ Problem, Acknowledgement, Recovery, Custom,
-              FlappingStart, FlappingEnd,
-              DowntimeStart, DowntimeEnd, DowntimeRemoved ]
+template Notification "teams-notifications-default-configuration" {
+    types = [ Problem, Recovery, Custom ]
 
     users = [ "icingaadmin" ]
 
     period = "24x7"
 
-    interval = 5m
+    interval = 24h
 
-    vars.slack_notifications_botname = "icinga2"
-    vars.slack_notifications_plugin_output_max_length = 3500
-    vars.slack_notifications_color_dictionary = {
-     "OK" = "good",
-     "UP" = "good",
-     "WARNING" = "warning",
-     "CRITICAL" = "danger",
-     "DOWN" = "danger",
-     "UNKNOWN" = "grey"
-    }
-    vars.slack_notifications_icon_dictionary = {
-       "DOWNTIMEREMOVED" = "leftwards_arrow_with_hook",
-       "ACKNOWLEDGEMENT" = "ballot_box_with_check",
-       "PROBLEM" = "red_circle",
-       "RECOVERY" = "large_blue_circle",
-       "WARNING" = "bell",
-       "CRITICAL" = "red_circle",
-       "OK" = "large_blue_circle",
-       "UNKNOWN" = "grey_question",
-       "DOWNTIMESTART" = "arrow_up_small",
-       "DOWNTIMEEND" = "arrow_down_small",
-       "FLAPPINGSTART" = "small_red_triangle",
-       "FLAPPINGEND" = "small_red_triangle_down",
-       "CUSTOM" = "speaking_head_in_silhouette"
+    vars.teams_notifications_plugin_output_max_length = 5000
+    vars.teams_notifications_color_dictionary = {
+     "OK" = "#44bb77",
+     "UP" = "#44bb77",
+     "WARNING" = "#ffaa44",
+     "CRITICAL" = "#ff5566",
+     "DOWN" = "#ff5566",
+     "UNKNOWN" = "#aa44ff"
     }
 }
 
-template Notification "slack-notifications-configuration" {
-    import "slack-notifications-user-configuration"
+template Notification "teams-notifications-configuration" {
+    import "teams-notifications-user-configuration"
 
-    command = "slack-notifications-command"
+    command = "teams-notifications-command"
 }
 
-template Notification "slack-notifications-default-configuration-services" {
-    import "slack-notifications-configuration"
+template Notification "teams-notifications-default-configuration-services" {
+    import "teams-notifications-configuration"
 
     states = [ OK, Warning, Critical, Unknown ]
 }
 
-template Notification "slack-notifications-default-configuration-hosts" {
-    import "slack-notifications-configuration"
+template Notification "teams-notifications-default-configuration-hosts" {
+    import "teams-notifications-configuration"
 
     states = [ Up, Down ]
 }
 
-apply Notification "slack-notifications-notification-hosts" to Host {
-  import "slack-notifications-user-configuration-hosts"
+apply Notification "teams-notifications-notification-hosts" to Host {
+  import "teams-notifications-user-configuration-hosts"
 
-  vars.slack_notifications_channel = "#monitoring_alerts"
+      vars.teams_notifications_webhook_url ="<YOUR TEAMS WEBHOOK URL FOR TEAM A>, e.g. https://community.webhook.office.com/webhookb2/Token1/IncomingWebhook/Token2"
+      
+  assign where host.vars.teams_notifications == "team_a"
+}
+
+apply Notification "teams-notifications-notification-hosts" to Host {
+  import "teams-notifications-user-configuration-hosts"
+
+      vars.teams_notifications_webhook_url ="<YOUR TEAMS WEBHOOK URL FOR TEAM B>, e.g. https://community.webhook.office.com/webhookb2/Token1/IncomingWebhook/Token2"
+     
+  assign where host.vars.teams_notifications == "team_b"
+}
+
+apply Notification "teams-notifications-notification-services" to Service {
+  import "teams-notifications-user-configuration-services"
   
-  assign where host.vars.slack_notifications == "enabled"
+      vars.teams_notifications_webhook_url ="<YOUR TEAMS WEBHOOK URL FOR TEAM A>, e.g. https://community.webhook.office.com/webhookb2/Token1/IncomingWebhook/Token2"
+      
+  assign where service.vars.teams_notifications == "team_a"
 }
 
-apply Notification "slack-notifications-notification-services" to Service {
-  import "slack-notifications-user-configuration-services"
+apply Notification "teams-notifications-notification-services" to Service {
+  import "teams-notifications-user-configuration-services"
   
-  vars.slack_notifications_channel = "#monitoring_alerts"
-
-  assign where service.vars.slack_notifications == "enabled"
-}
-
-apply Notification "slack-notifications-notification-hosts" to Host {
-  import "slack-notifications-user-configuration-hosts"
-
-  assign where host.vars.slack_notifications_channel
-}
-
-apply Notification "slack-notifications-notification-services" to Service {
-  import "slack-notifications-user-configuration-services"
-
-  assign where service.vars.slack_notifications_channel
+      vars.teams_notifications_webhook_url ="<YOUR TEAMS WEBHOOK URL FOR TEAM B>, e.g. https://community.webhook.office.com/webhookb2/Token1/IncomingWebhook/Token2"
+      
+  assign where service.vars.teams_notifications == "team_b"
 }
