--- a/src/slack-notifications/slack-notifications-command.conf
+++ b/src/slack-notifications/slack-notifications-command.conf
@@ -1,36 +1,29 @@
-object NotificationCommand "slack-notifications-command" {
+object NotificationCommand "teams-notifications-command" {
   import "plugin-notification-command"
 
   command = {{
 
-    log(LogDebug, "slack-notifications", "Sending notification...reading user configuration")
-    var plugin_output_max_length_from_config = macro("$slack_notifications_plugin_output_max_length$")
+    log(LogDebug, "teams-notifications", "Sending notification...reading user configuration")
+    var plugin_output_max_length_from_config = macro("$teams_notifications_plugin_output_max_length$")
     var plugin_output_max_length = Math.round(plugin_output_max_length_from_config)
-    var slack_webhook_url = macro("$slack_notifications_webhook_url$")
-    var slack_proxy = macro("$slack_notifications_proxy$")
-    var slack_channel = macro("$slack_notifications_channel$")
-    var slack_botname = macro("$slack_notifications_botname$")
-    var icinga2_base_url = macro("$slack_notifications_icinga2_base_url$")
-    var slack_icon_dictionary = macro("$slack_notifications_icon_dictionary$")
-    var slack_color_dictionary = macro("$slack_notifications_color_dictionary$")
+    var teams_webhook_url = macro("$teams_notifications_webhook_url$")
+    var teams_proxy = macro("$teams_notifications_proxy$")
+    var icinga2_base_url = macro("$teams_notifications_icinga2_base_url$")
+    var teams_color_dictionary = macro("$teams_notifications_color_dictionary$")
     var configuration = {
-        "vars.slack_notifications_plugin_output_max_length" = plugin_output_max_length,
-        "vars.slack_notifications_webhook_url" = slack_webhook_url,
-        "vars.slack_notifications_channel" = slack_channel,
-        "vars.slack_notifications_proxy" = slack_proxy,
-        "vars.slack_notifications_botname" = slack_botname,
-        "vars.slack_notifications_icinga2_base_url" = icinga2_base_url
-        "vars.slack_notifications_icon_dictionary" = slack_icon_dictionary
-        "vars.slack_notifications_color_dictionary" = slack_color_dictionary
+        "vars.teams_notifications_plugin_output_max_length" = plugin_output_max_length,
+        "vars.teams_notifications_webhook_url" = teams_webhook_url,
+        "vars.teams_notifications_proxy" = teams_proxy,
+        "vars.teams_notifications_icinga2_base_url" = icinga2_base_url,
+        "vars.teams_notifications_color_dictionary" = teams_color_dictionary
     }
-    log(LogDebug, "slack-notifications", "Sending notification...read user configuration successfully: " + Json.encode(configuration))
+    log(LogDebug, "teams-notifications", "Sending notification...read user configuration successfully: " + Json.encode(configuration))
 
-    log(LogDebug, "slack-notifications", "Sending notification...reading notification data")
+    log(LogDebug, "teams-notifications", "Sending notification...reading notification data")
     var notification_type = macro("$notification.type$")
     var notification_author = macro("$notification.author$")
     var notification_comment = macro("$notification.comment$")
     var icinga_long_date_time = macro("$icinga.long_date_time$")
-    var icinga_timet = macro("$icinga.timet$")
     var service_name = macro("$service.name$")
     var service_display_name = macro("$service.display_name$")
     var service_state = macro("$service.state$")
@@ -48,7 +41,6 @@ object NotificationCommand "slack-notifications-command" {
         "notification.author" = notification_author,
         "notification.comment" = notification_comment,
         "icinga.long_date_time" = icinga_long_date_time,
-        "icinga.timet" = icinga_timet,
         "service.name" = service_name,
         "service.display_name" = service_display_name,
         "service.state" = service_state,
@@ -62,28 +54,14 @@ object NotificationCommand "slack-notifications-command" {
         "host.last_state" = host_last_state,
         "host.output" = host_output,
     }
-    log(LogDebug, "slack-notifications", "Sending notification...read notification data successfully: " + Json.encode(notification_data))
-
-    log(LogDebug, "slack-notifications", "Sending notification...choosing icon")
-    var notification_type_custom_text = ""
-    if(notification_type == "CUSTOM"){
-        notification_type_custom_text = "(Author: " + notification_author + ", Message: " + notification_comment + ")"
-    }
+    log(LogDebug, "teams-notifications", "Sending notification...read notification data successfully: " + Json.encode(notification_data))
 
     var cmd_proxy = ""
-    if(slack_proxy != "") {
-        cmd_proxy = "--proxy "+slack_proxy
+    if(teams_proxy != "") {
+        cmd_proxy = "--proxy "+teams_proxy
     }
 
-    try {
-        var icon = slack_icon_dictionary.get(notification_type)
-    } except {
-        var icon = "bell"
-    }
-
-    log(LogDebug, "slack-notifications", "Sending notification...chose icon successfully: " + icon)
-
-    log(LogDebug, "slack-notifications", "Sending notification...generating notification text")
+    log(LogDebug, "teams-notifications", "Sending notification...generating notification text")
 
     try {
         var short_host_output = host_output.substr(0, plugin_output_max_length)
@@ -92,26 +70,18 @@ object NotificationCommand "slack-notifications-command" {
     }
 
     var short_host_output = host_output.substr(0, plugin_output_max_length)
-    var host_name_with_link = "<" + icinga2_base_url + "/monitoring/host/show?host=" + host_name + "|" + host_display_name + ">"
-    var text = "error crafting payload"
-    var attachments = [{ "text" = "error crafting attachment" }]
-    var fields = [{ "title" = "Host", "value" =  host_name_with_link, "short" = true }]
-    var fallback = "Error generating fallback text"
+    var host_link = icinga2_base_url + "/monitoring/host/show?host=" + host_name
+    var attachments = "{\"text\" = \"error crafting attachment\"}"
     var mainTitle = "error determining title"
     var output = "unknown"
-    var authorField = [{ "title" = "Author", "value" = notification_author, "short" = true }]
-    var commentField = [{ "title" = "Comment", "value" = notification_comment, "short" = false }]
 
     if(service_name != null) {
         try {
-          var color = slack_color_dictionary.get(service_state)
+          var color = teams_color_dictionary.get(service_state)
         }except {
           var color = "#000"
         }
-        var service_name_with_link = "<" + icinga2_base_url + "/monitoring/service/show?host=" + host_name + "&service=" + service_name + "|" + service_display_name + ">"
-
-        var serviceField = [{ "title" = "Service", "value" =  service_name_with_link, "short" = true}]
-        fields += serviceField
+        var service_link = icinga2_base_url + "/monitoring/service/show?host=" + host_name + "&service=" + service_name
 
         try {
             var short_service_output = service_output.substr(0, plugin_output_max_length)
@@ -120,54 +90,38 @@ object NotificationCommand "slack-notifications-command" {
         }
 
         var short_service_output = service_output.substr(0, plugin_output_max_length)
-        var service_state_text = " transitioned from state " + service_last_state + " to state " + service_state
-        if(service_last_state == service_state) {
-            service_state_text = " is still in state " + service_state
-        }
 
-        mainTitle = ":" + icon + ": " + notification_type + ": Service " + service_name_with_link + service_state_text
+        mainTitle = notification_type + ": Service " + service_display_name + " on Host " + host_display_name + " is in state " + service_state
         output = short_service_output
-        fallback = notification_type + notification_type_custom_text + ": Service " + service_name + service_state_text + " on host " + host_name + ". Plugin output: ```" + short_service_output + "```"
+	if(notification_type == "CUSTOM"){
+	        attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Service\",\"value\":\""+service_name+"\"},{\"name\":\"ServiceStatus\",\"value\":\""+service_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"},{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+service_link+"\"}]}]}"
+	} else {
+		attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Service\",\"value\":\""+service_name+"\"},{\"name\":\"ServiceStatus\",\"value\":\""+service_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+service_link+"\"}]}]}"
+	}
     } else {
         try {
-          var color = slack_color_dictionary.get(host_state)
+          var color = teams_color_dictionary.get(host_state)
         } except {
           var color = "#000"
         }
 
-        var host_state_text = " transitioned from state " + host_last_state + " to state " + host_state
-        if(host_last_state == host_state) {
-            host_state_text = " is still in state " + host_state
-        }
-
         output = short_host_output
-        mainTitle = ":" + icon + ": " + notification_type + ": Host " + host_name_with_link + host_state_text
-        fallback = notification_type + ": Host " + host_name + host_state_text + ". Plugin output: ```" + short_host_output + "```"
+        mainTitle = notification_type + ": Host " + host_display_name + " is in state " + host_state
+        if(notification_type == "CUSTOM"){
+        	attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Status\",\"value\":\""+host_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"},{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+host_link+"\"}]}]}"
+	} else {
+		attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Status\",\"value\":\""+host_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+host_link+"\"}]}]}"
+	}
     }
 
-    if(notification_comment){
-      fields += commentField
-    }
-    if(notification_author) {
-      fields += authorField
-    }
+    log(LogDebug, "teams-notifications", "Sending notification...generated notification attachments successfully: " + attachments)
+    log(LogDebug, "teams-notifications", attachments)
 
+    log(LogDebug, "teams-notifications", "Generating notification command")
 
-    text = "```" + output + "```"
-    attachments = [{ "color" = color, "title" = mainTitle, "text" = text, "fields" = fields, "fallback" = fallback, "footer" = "Icinga Alerts", "ts" = icinga_timet }]
-    log(LogDebug, "slack-notifications", "Sending notification...generated notification text successfully: " + text)
-    log(LogDebug, "slack-notifications", attachments)
+    var payload_argument = escape_shell_arg(attachments)
+    var teams_webhook_url_argument = escape_shell_arg(teams_webhook_url)
 
-    log(LogDebug, "slack-notifications", "Generating notification command")
-    var payload_dictionary = {
-        "channel" = slack_channel,
-        "username" = slack_botname,
-        "attachments" = attachments
-    }
-    var payload_json = Json.encode(payload_dictionary)
-    var slack_payload = "payload=" + payload_json
-    var payload_argument = escape_shell_arg(slack_payload)
-    var slack_webhook_url_argument = escape_shell_arg(slack_webhook_url)
     var cmd = [
                 "curl",
                 cmd_proxy,
@@ -175,12 +129,13 @@ object NotificationCommand "slack-notifications-command" {
                 "--connect-timeout", "30",
                 "--max-time", "60",
                 "--silent", "--show-error",
+                "--header", "'Content-Type: application/json'",
                 "-X", "POST",
-                "--data-urlencode", payload_argument,
-                slack_webhook_url_argument
+                "--data", payload_argument,
+                teams_webhook_url_argument
     ]
     var notification_command = cmd.join(" ")
-    log(LogDebug, "slack-notifications", "Generated notification command successfully: " + notification_command)
+    log(LogDebug, "teams-notifications", "Generated notification command successfully: " + notification_command)
 
     return notification_command
   }}
