--- a/src/teams-notifications/teams-notifications-command.conf
+++ b/src/teams-notifications/teams-notifications-command.conf
@@ -93,11 +93,16 @@ object NotificationCommand "teams-notifications-command" {
 
         mainTitle = notification_type + ": Service " + service_display_name + " on Host " + host_display_name + " is in state " + service_state
         output = short_service_output
+
+	attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\""
+	attachments = attachments + ",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"}"
+	attachments = attachments + ",{\"name\":\"Service\",\"value\":\""+service_name+"\"},{\"name\":\"Status\",\"value\":\""+service_state+"\"}"
+	attachments = attachments + ",{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}"
 	if(notification_type == "CUSTOM"){
-	        attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Service\",\"value\":\""+service_name+"\"},{\"name\":\"Status\",\"value\":\""+service_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"},{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+service_link+"\"}]}]}"
-	} else {
-		attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Service\",\"value\":\""+service_name+"\"},{\"name\":\"Status\",\"value\":\""+service_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+service_link+"\"}]}]}"
+	    attachments = attachments + ",{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}"
 	}
+	attachments = attachments + "],\"markdown\":false}]"
+	attachments = attachments + ",\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+service_link+"\"}]}]}"
     } else {
         try {
           var color = teams_color_dictionary.get(host_state)
@@ -107,11 +112,16 @@ object NotificationCommand "teams-notifications-command" {
 
         output = short_host_output
         mainTitle = notification_type + ": Host " + host_display_name + " is in state " + host_state
-        if(notification_type == "CUSTOM"){
-        	attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Status\",\"value\":\""+host_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"},{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+host_link+"\"}]}]}"
-	} else {
-		attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"},{\"name\":\"Status\",\"value\":\""+host_state+"\"},{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}],\"markdown\":true}],\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+host_link+"\"}]}]}"
+
+	attachments = "{\"@type\":\"MessageCard\",\"themeColor\":\""+color+"\",\"summary\":\""+mainTitle+"\""
+	attachments = attachments + ",\"sections\":[{\"activityTitle\":\""+mainTitle+"\",\"facts\":[{\"name\":\"Host\",\"value\":\""+host_name+"\"}"
+	attachments = attachments + ",{\"name\":\"Status\",\"value\":\""+host_state+"\"}"
+	attachments = attachments + ",{\"name\":\"Output\",\"value\":\""+output+"\"},{\"name\":\"Time\",\"value\":\""+icinga_long_date_time+"\"}"        
+	if(notification_type == "CUSTOM"){
+	    attachments = attachments + ",{\"name\":\"Comment\",\"value\":\""+notification_comment+"\"},{\"name\":\"Author\",\"value\":\""+notification_author+"\"}"
 	}
+	attachments = attachments + "],\"markdown\":false}]"
+	attachments = attachments + ",\"potentialAction\":[{\"@type\":\"OpenUri\",\"name\":\"View in Icinga\",\"targets\":[{\"os\":\"default\",\"uri\":\""+host_link+"\"}]}]}"
     }
 
     log(LogDebug, "teams-notifications", "Sending notification...generated notification attachments successfully: " + attachments)
