--- a/src/teams-notifications/teams-notifications-command.conf
+++ b/src/teams-notifications/teams-notifications-command.conf
@@ -21,21 +21,21 @@ object NotificationCommand "teams-notifications-command" {
 
     log(LogDebug, "teams-notifications", "Sending notification...reading notification data")
     var notification_type = macro("$notification.type$")
-    var notification_author = macro("$notification.author$")
-    var notification_comment = macro("$notification.comment$")
+    var notification_author = escape_shell_cmd(macro("$notification.author$"))
+    var notification_comment = escape_shell_cmd(macro("$notification.comment$"))
     var icinga_long_date_time = macro("$icinga.long_date_time$")
     var service_name = macro("$service.name$")
     var service_display_name = macro("$service.display_name$")
     var service_state = macro("$service.state$")
     var service_check_attempt = macro("$service.check_attempt$")
     var service_last_state = macro("$service.last_state$")
-    var service_output = macro("$service.output$")
+    var service_output = escape_shell_cmd(macro("$service.output$"))
     var host_name = macro("$host.name$")
     var host_display_name = macro("$host.display_name$")
     var host_state = macro("$host.state$")
     var host_check_attempt = macro("$host.check_attempt$")
     var host_last_state = macro("$host.last_state$")
-    var host_output = macro("$host.output$")
+    var host_output = escape_shell_cmd(macro("$host.output$"))
     var notification_data = {
         "notification.type" = notification_type,
         "notification.author" = notification_author,
