--- a/src/teams-notifications/teams-notifications-command.conf
+++ b/src/teams-notifications/teams-notifications-command.conf
@@ -21,6 +21,7 @@ object NotificationCommand "teams-notifications-command" {
 
     log(LogDebug, "teams-notifications", "Sending notification...reading notification data")
     var notification_type = macro("$notification.type$")
+    var notification_author = macro("$notification.author$")
     if(notification_author != "") {
         notification_author = notification_author.replace("\\", "/").replace("\"","'")
     }
@@ -38,7 +39,6 @@ object NotificationCommand "teams-notifications-command" {
     if(service_output != "") {
         service_output = service_output.replace("\\", "/").replace("\"","'")
     }
-    var service_output = macro("$service.output$")
     var host_name = macro("$host.name$")
     var host_display_name = macro("$host.display_name$")
     var host_state = macro("$host.state$")
